# webapp-storage

./: .eslintrc.cjs  .prettierrc  Makefile  README.md  UPDATE_LOG.md  index.js  initTxt.js  package.json  pnpm-lock.yaml  stats.html  tailwind.config.js  transImage.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-tauri-ubuntu22.yml  publish.yml
.husky/: pre-commit
hack/: Dockerfile
scripts/: release.mjs  updatelog.mjs  updater.mjs
src/: App.tsx  Text.tsx  config.ts  main.ts
src-tauri/: Cargo.toml  lib.rs  tauri.conf.json
src-tauri/src/: command.rs  crypto.rs  data_store.rs  download.rs  emit.rs  http.rs  log.rs  main.rs  open_folder.rs  queue.rs  throttle.rs  upload copy.rs  upload.rs
src/assets/css/: antv.less  index.ts  normalize.less  styles.less
src/components/: Text.tsx
src/components/authButton/: README.md  index.tsx
src/components/dirAuth/: GroupAuthPanel.tsx  MemberAuthPanel.tsx  index.tsx
src/components/imagesviewer/: CircularArray.ts  index.less  index.tsx  matrix.ts  store.ts  useMoveModal.ts  useZoomImage.ts
src/components/selectDirModal/: index.tsx
src/components/table/: index.tsx
src/components/textEllipsis/: index.tsx
src/components/tooltipsButton/: index.tsx
src/components/videoPlayer/: index.tsx
src/components/videosviewer/: index.tsx
src/layouts/: BaseLayout.tsx  Sidenav.tsx  baseLayout.less
src/pages/account/: index.tsx
src/pages/admin/: addAdminModal.tsx  (+2 more)
src/plugins/: index.ts
src/store/: index.ts  persist.ts  storeLogs.ts
src/utils/: date.ts  getFileSize.tsx  keymap.ts
(+74 files in other folders)
